--- a/index.html
+++ b/index.html
@@ -5,82 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catchy Cases</title>
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      color: #e0e0e0;
-      background-image: url('https://github.com/Woschj/Catchy-Customs/blob/main/CC_Logo_Wortmarke.png?raw=true');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center center;
-    }
-
-    h1 {
-      font-weight: 600;
-      margin-bottom: 20px;
-      color: #ffffff;
-      text-align: center;
-      font-size: 2rem;
-    }
-
-    #container {
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-    }
-
-    #controls {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      background: rgba(30, 30, 30, 0.8);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      margin-right: 20px;
-    }
-
-    #controls label {
-      font-size: 14px;
-      margin-bottom: 8px;
-      color: #b3b3b3;
-    }
-
-    #controls select,
-    #controls input,
-    #controls button {
-      width: 200px;
-      padding: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #333;
-      border-radius: 5px;
-      font-size: 16px;
-      font-family: inherit;
-      background: #2c2c2c;
-      color: #e0e0e0;
-      outline: none;
-      transition: border-color 0.2s ease;
-    }
-
-    #controls select:focus,
-    #controls input:focus,
-    #controls button:focus {
-      border-color: #0071e3;
-    }
-
-    #preview-canvas {
-      border: 1px solid #333;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      background: rgba(30, 30, 30, 0.8);
-      position: relative;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <h1></h1>
+  <h1>Catchy Cases</h1>
   <div id="container">
     <div id="controls">
       <label for="manufacturer-select">Hersteller:</label>
@@ -94,206 +23,19 @@
 
       <label for="material-select">Material:</label>
       <select id="material-select"></select>
+
+      <input type="file" id="custom-image-upload" accept="image/*">
+      <button id="toggle-lock">Lock Custom Image</button>
+
+      <div id="zoomControls">
+        <button id="zoomIn">Zoom in</button>
+        <button id="zoomOut">Zoom out</button>
+      </div>
     </div>
     <canvas id="preview-canvas"></canvas>
   </div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      const REPO_OWNER = "Woschj";
-      const REPO_NAME = "Catchy-Customs";
-      const DESIGN_FOLDER = "design";
-      const MATERIAL_FOLDER = "material";
-      const manufacturerSelect = document.getElementById("manufacturer-select");
-      const modelSelect = document.getElementById("model-select");
-      const designSelect = document.getElementById("design-select");
-      const materialSelect = document.getElementById("material-select");
-      const previewCanvas = document.getElementById("preview-canvas");
-      const ctx = previewCanvas.getContext("2d");
-      const CANVAS_WIDTH = 544;
-      const CANVAS_HEIGHT = 544;
-      previewCanvas.width = CANVAS_WIDTH;
-      previewCanvas.height = CANVAS_HEIGHT;
-
-      async function fetchFolders(folder) {
-        const response = await fetch(`https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/contents/${folder}`);
-        const data = await response.json();
-        return data.map(item => item.name);
-      }
-
-      async function fetchMaterials() {
-        const response = await fetch(`https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/contents/${MATERIAL_FOLDER}`);
-        const data = await response.json();
-        return data.map(item => ({ name: item.name, url: item.download_url }));
-      }
-
-      function populateDropdown(selectElement, options, includeUrl = true) {
-        selectElement.innerHTML = '';
-        options.forEach(option => {
-          const optionElement = document.createElement("option");
-          optionElement.value = includeUrl ? option.url : option.name;
-          optionElement.textContent = option.name;
-          selectElement.appendChild(optionElement);
-        });
-      }
-
-      function updatePreview() {
-        const selectedDesign = designSelect.value;
-        const selectedMaterial = materialSelect.value;
-        if (selectedDesign) {
-          try {
-            const designImg = await loadImage(selectedDesign);
-            ctx.clearRect(0, 0, previewCanvas.width, previewCanvas.height);
-            const canvasRatio = previewCanvas.width / previewCanvas.height;
-            const imageRatio = designImg.width / designImg.height;
-            let drawWidth, drawHeight, offsetX, offsetY;
-            if (canvasRatio > imageRatio) {
-              drawHeight = previewCanvas.height;
-              drawWidth = drawHeight * imageRatio;
-              offsetX = (previewCanvas.width - drawWidth) / 2;
-              offsetY = 0;
-            } else {
-              drawWidth = previewCanvas.width;
-              drawHeight = drawWidth / imageRatio;
-              offsetX = 0;
-              offsetY = (previewCanvas.height - drawHeight) / 2;
-            }
-            ctx.drawImage(designImg, offsetX, offsetY, drawWidth, drawHeight);
-            const designData = ctx.getImageData(0, 0, previewCanvas.width, previewCanvas.height);
-            for (let i = 0; i < designData.data.length; i += 4) {
-              const r = designData.data[i];
-              const g = designData.data[i + 1];
-              const b = designData.data[i + 2];
-              const a = designData.data[i + 3];
-              if (r === 255 && g === 255 && b === 255) {
-                designData.data[i + 3] = 51; // 20% Transparenz (255 * 0.2)
-              }
-            }
-            ctx.putImageData(designData, 0, 0);
-            if (selectedMaterial && selectedMaterial !== "No Material") {
-              try {
-                const materialImg = await loadImage(selectedMaterial);
-                const materialCanvas = document.createElement("canvas");
-                const materialCtx = materialCanvas.getContext("2d");
-                materialCanvas.width = previewCanvas.width;
-                materialCanvas.height = previewCanvas.height;
-                materialCtx.drawImage(materialImg, offsetX, offsetY, drawWidth, drawHeight);
-                const materialData = materialCtx.getImageData(0, 0, previewCanvas.width, previewCanvas.height);
-                const grayscaleData = createGrayscaleImage(designData);
-                for (let i = 0; i < designData.data.length; i += 4) {
-                  const alpha = designData.data[i + 3] / 255;
-                  const designLuminance = grayscaleData.data[i] / 255;
-                  const depth = 1 - designLuminance;
-                  const materialR = materialData.data[i];
-                  const materialG = materialData.data[i + 1];
-                  const materialB = materialData.data[i + 2];
-                  const opacity = 0.75;
-                  designData.data[i] = designData.data[i] * (1 - depth * opacity) + materialR * depth * opacity * alpha;
-                  designData.data[i + 1] = designData.data[i + 1] * (1 - depth * opacity) + materialG * depth * opacity * alpha;
-                  designData.data[i + 2] = designData.data[i + 2] * (1 - depth * opacity) + materialB * depth * opacity * alpha;
-                }
-                ctx.putImageData(designData, 0, 0);
-              } catch (err) {
-                console.error("Fehler beim Laden des Materialbilds:", err);
-              }
-            }
-          } catch (err) {
-            console.error("Fehler beim Laden des Designbilds:", err);
-          }
-        }
-      }
-
-      async function handleManufacturerChange() {
-        const selectedManufacturer = manufacturerSelect.value;
-        if (selectedManufacturer && selectedManufacturer !== "None") {
-          const models = await fetchFolders(`${DESIGN_FOLDER}/${selectedManufacturer}`);
-          populateDropdown(
-            modelSelect,
-            models.map((model) => ({
-              name: model,
-              url: model
-            })),
-            false
-          );
-          modelSelect.insertAdjacentHTML("afterbegin", '<option value="None" selected>None</option>');
-        } else {
-          modelSelect.innerHTML = '';
-          modelSelect.insertAdjacentHTML("afterbegin", '<option value="None" selected>None</option>');
-        }
-      }
-
-      async function handleModelChange() {
-        const selectedManufacturer = manufacturerSelect.value;
-        const selectedModel = modelSelect.value;
-        if (selectedManufacturer && selectedManufacturer !== "None" && selectedModel && selectedModel !== "None") {
-          const designs = await fetchFolders(`${DESIGN_FOLDER}/${selectedManufacturer}/${selectedModel}`);
-          populateDropdown(
-            designSelect,
-            designs.map((design) => ({
-              name: design,
-              url: `https://raw.githubusercontent.com/${REPO_OWNER}/${REPO_NAME}/main/${DESIGN_FOLDER}/${selectedManufacturer}/${selectedModel}/${design}`
-            }))
-          );
-          designSelect.insertAdjacentHTML("afterbegin", '<option value="None" selected>None</option>');
-        } else {
-          designSelect.innerHTML = '';
-          designSelect.insertAdjacentHTML("afterbegin", '<option value="None" selected>None</option>');
-        }
-      }
-
-      manufacturerSelect.addEventListener("change", handleManufacturerChange);
-      modelSelect.addEventListener("change", handleModelChange);
-
-      const manufacturers = await fetchFolders(DESIGN_FOLDER);
-      populateDropdown(
-        manufacturerSelect,
-        manufacturers.map((manufacturer) => ({
-          name: manufacturer,
-          url: manufacturer
-        })),
-        false
-      );
-      manufacturerSelect.insertAdjacentHTML("afterbegin", '<option value="None" selected>None</option>');
-
-      const materials = await fetchMaterials();
-      populateDropdown(materialSelect, materials);
-      materialSelect.insertAdjacentHTML(
-        "afterbegin",
-        '<option value="No Material" selected>No Material</option>'
-      );
-
-      designSelect.addEventListener("change", updatePreview);
-      materialSelect.addEventListener("change", updatePreview);
-
-      if (designSelect.options.length > 0 && modelSelect.options.length > 0) {
-        updatePreview();
-      }
-    });
-
-    async function loadImage(url) {
-      return new Promise((resolve, reject) => {
-        const img = new Image();
-        img.onload = () => resolve(img);
-        img.onerror = reject;
-        img.src = url;
-      });
-    }
-
-    function createGrayscaleImage(imageData) {
-      const grayscaleData = new ImageData(imageData.width, imageData.height);
-      for (let i = 0; i < imageData.data.length; i += 4) {
-        const r = imageData.data[i];
-        const g = imageData.data[i + 1];
-        const b = imageData.data[i + 2];
-        const luminance = (0.299 * r + 0.587 * g + 0.114 * b);
-        grayscaleData.data[i] = luminance;
-        grayscaleData.data[i + 1] = luminance;
-        grayscaleData.data[i + 2] = luminance;
-        grayscaleData.data[i + 3] = imageData.data[i + 3];
-      }
-      return grayscaleData;
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 
 </html>
