--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
       </div>
     </div>
     <div id="edit-controls">
-      <button id="stamp-image">Stempeln</button>
+      <button id="stamp-image">Bild Hinzufügen</button>
       <button id="zoomIn">+</button>
       <button id="zoomOut">-</button>
       <button id="export-image">Bild exportieren</button>
-      <button id="remove-background">Hintergrund entfernen</button>
+      <button id="remove-background">Hintergrund entfernen (experimental)</button>
     </div>
     <div id="custom-image-upload-container">
       <input type="file" id="custom-image-upload" accept="image/*">
